# ta-statute-law-retrieval

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-jnlp.txt  requirements-paragnn.txt  requirements-sailer.txt  requirements.txt  results.txt  setup_paragnn.sh  setup_vm.sh
annotation-tool/: Dockerfile  README.md  compute_agreement.py  deploy_railway.sh  docker-compose.yml  generate_pairs.py  generate_tokens.py  requirements.txt  score_agreement.py
documentation/: ANALYSIS-ErrorAnalysis.md  ANALYSIS_01-Vocabulary-Gap.md  ANALYSIS_02-Structural-Corelevance.md  ANALYSIS_03-Gap-Structure-Coupling.md  EVAL-Baseline-Results.md  EVAL-Expanded-Results.md  EVAL-ParaGNN.md  EVAL-Rerun-2026-05.md  EVAL-StructGNN.md  FULL-RUN-PIPELINE.md  GNN-PIPELINE.md  HLD.md  PAPER-WRITING-GUIDE.md  PHILOSOPHY-StatuteRetrieval.md  PIPELINE-QrelsExpansion.md  PLANNING-EMNLP2026.md  PLANNING-HumanizeQuery.md  PLANNING-Methodology.md  PLANNING-QUAM.md  RESEARCH-AgenticFlat.md  RESEARCH-Context1.md  RESEARCH-IssueDecomposition.md  RESEARCH-LegalCharacteristicRetrieval.md  RESEARCH-ParaGNN.md  RESEARCH-StructGNN.md  RESEARCH-late-interaction-moe.md  RESEARCH_ContraNorm.md  RUN-Full-Pipeline.md  SESSION-2026-04-08.md  benchmark-implementation-guide.md
experiment/: 1_statute_parser.ipynb  2_judgement_parser.ipynb  3_judgement_summarizer.ipynb  3b_vllm_judgement_summarizer.ipynb  4_bsard_dataset.ipynb  5_ilpcsr_dataset.ipynb  6_stard_dataset.ipynb  7_split_visualization.ipynb  analyze_catboost.py  annotate_subsumption.py  catboost_multi_feature.py  create_cleaned_downloads.py  (+8 more)
(+1048 files in other folders)
