[project]
name = "ta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "cloudscraper==1.2.71",
    "mistralai==1.10.0",
    "pandas==2.3.3",
    "pymupdf==1.26.7",
    "python-dotenv==1.2.1",
    "tqdm==4.67.1",
]
